--- a/california-housing.ipynb
+++ b/california-housing.ipynb
@@ -242,7 +242,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#housing[housing.isna().any(axis=1)]"
+    "housing_prepared"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing[housing.isna().any(axis=1)]"
    ]
   },
   {
@@ -351,6 +360,13 @@
     "final_rmse = np.sqrt(mean_squared_error(y_test, final_predictions))\n",
     "print(\"RMSE:{:10.2f}\".format(final_rmse))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -369,9 +385,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
