--- a/california-housing.ipynb
+++ b/california-housing.ipynb
@@ -47,7 +47,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# there are some missing values in attribute total_bedrooms\n",
+    "# there are some missing values in attribute total_bedrooms: this line filters rows in \n",
+    "# the housing DataFrame that contain any missing values.\n",
+    "# isna() → identifies missing values.\n",
+    "# any(axis=1) → checks if any column in a row has NaN.\n",
     "housing[housing.isna().any(axis=1)]"
    ]
   },
@@ -71,15 +74,6 @@
     "Plot the histograms of the features in the data set.\n",
     "\n",
     "Save the image to a file."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "housing[housing.isna().any(axis=1)]"
    ]
   },
   {
@@ -134,6 +128,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "corr_matrix = L.corr(numeric_only=True)\n",
+    "corr_matrix[\"median_house_value\"].sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from pandas.plotting import scatter_matrix\n",
     "print(\"Computing correlations...\");\n",
     "attributes = [\"median_house_value\", \"median_income\", \"total_rooms\", \"housing_median_age\"];\n",
@@ -147,9 +151,14 @@
    "outputs": [],
    "source": [
     "# Manual feature construction\n",
-    "#L.loc[\"rooms_per_household\"] = L[\"total_rooms\"] / L[\"households\"]\n",
-    "#L.loc[\"bedrooms_per_room\"] = L[\"total_bedrooms\"] / L[\"total_rooms\"]\n",
-    "#L.loc[\"population_per_household\"] = L[\"population\"] / L[\"households\"]"
+    "'''\n",
+    "L[\"rooms_per_household\"] = L[\"total_rooms\"] / L[\"households\"]\n",
+    "L[\"bedrooms_per_room\"] = L[\"total_bedrooms\"] / L[\"total_rooms\"]\n",
+    "L[\"population_per_household\"] = L[\"population\"] / L[\"households\"]\n",
+    "corr_matrix = L.corr(numeric_only=True)\n",
+    "corr_matrix[\"median_house_value\"].sort_values(ascending=False)\n",
+    "'''\n",
+    "# Comment and restart kernel after this"
    ]
   },
   {
@@ -174,15 +183,6 @@
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.preprocessing import FunctionTransformer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "housing[housing.isna().any(axis=1)]"
    ]
   },
   {
@@ -234,35 +234,6 @@
     "\n",
     "housing_prepared = full_pipeline.fit_transform(housing)\n",
     "print(\"{}\".format(housing_prepared.shape))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "housing_prepared"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "housing[housing.isna().any(axis=1)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Correlations with class after the pipeline\n",
-    "for i in range(housing_prepared.shape[1]):\n",
-    "    print(\"{:6.2f}\".format(np.corrcoef(housing_prepared[:,i], housing_labels)[1,0]))"
    ]
   },
   {
@@ -385,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
